--- a/sd-scripts/requirements.txt
+++ b/sd-scripts/requirements.txt
@@ -19,7 +19,7 @@ altair==4.2.2
 easygui==0.98.3
 toml==0.10.2
 voluptuous==0.13.1
-huggingface-hub==0.24.5
+huggingface-hub
 # for Image utils
 imagesize==1.4.1
 numpy<=2.0
